# qgis-mcp

./: README.md  pyproject.toml
src/qgis_mcp/: __init__.py  client.py  connection.py  metadata.txt  qgis_mcp.py  server.py
src/qgis_mcp/plugin/: __init__.py  qgis_mcp_plugin.py  server.py
