[project]
name = "qgis-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kota Yuhara", email = "hotwater1367@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
